Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11179

WSREP transaction excceded size limit in Galera cluster causes MariaDB to crash

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.1.17
    • 10.1.20
    • Galera, wsrep
    • MariaDB Galera cluster 10.1.17, 3 nodes, galera-25.3.18-1, CentOS 6.8 x86_64.

    Description

      One of the cluster nodes crashed with possible error

      [Warning] WSREP: transaction size limit (2147483647) exceeded: 2147483648

      however transaction committed successfully on 2 other nodes, and crashed node after restart got IST and continue to work correctly. I suppose that whether transaction should be discarded, or completed successfully at all nodes, but not to crash only one node. Here is log output:

      2016-10-30 10:53:42 139650184657664 [Note] InnoDB: Online DDL : Start applying row log
      2016-10-30 10:53:42 139650184657664 [Note] InnoDB: Online DDL : End of applying row log
      2016-10-30 10:53:42 139650184657664 [Note] InnoDB: Online DDL : Completed
      2016-10-30 11:11:49 139650184657664 [Warning] WSREP: transaction size limit (2147483647) exceeded: 2147483648
      161030 11:11:49 [ERROR] mysqld got signal 11 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.

      To report this bug, see https://mariadb.com/kb/en/reporting-bugs

      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed,
      something is definitely wrong and this may fail.

      Server version: 10.1.17-MariaDB
      key_buffer_size=134217728
      read_buffer_size=131072
      max_used_connections=92
      max_threads=3002
      thread_count=49
      It is possible that mysqld could use up to
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 6725061 K bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.

      Thread pointer: 0x0x7ef642ec7008
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7f02d7a63140 thread_stack 0x48400
      (my_addr_resolve failure: fork)
      /usr/sbin/mysqld(my_print_stacktrace+0x2b) [0x7f02dbacb16b]
      /usr/sbin/mysqld(handle_fatal_signal+0x475) [0x7f02db627375]
      /lib64/libpthread.so.0(+0x3df100f7e0) [0x7f02dac2c7e0]
      /usr/sbin/mysqld(wsrep_get_apply_format(THD*)+0x20) [0x7f02db5d55d0]
      /usr/sbin/mysqld(wsrep_dump_rbr_buf_with_header(THD*, void const*, unsigned long)+0x84) [0x7f02db5d4c54]
      /usr/sbin/mysqld(+0x5792a2) [0x7f02db5d52a2]
      /usr/sbin/mysqld(wsrep_run_wsrep_commit+0x404) [0x7f02db5c4264]
      /usr/sbin/mysqld(+0x568ec8) [0x7f02db5c4ec8]
      /usr/sbin/mysqld(ha_commit_trans(THD*, bool)+0x197) [0x7f02db62a2e7]
      /usr/sbin/mysqld(trans_commit_stmt(THD*)+0x38) [0x7f02db589478]
      /usr/sbin/mysqld(mysql_execute_command(THD*)+0xb7c) [0x7f02db4b1a3c]
      /usr/sbin/mysqld(mysql_parse(THD*, char*, unsigned int, Parser_state*)+0x28d) [0x7f02db4ba17d]
      /usr/sbin/mysqld(+0x45e27c) [0x7f02db4ba27c]
      /usr/sbin/mysqld(dispatch_command(enum_server_command, THD*, char*, unsigned int)+0x1c63) [0x7f02db4bc603]
      /usr/sbin/mysqld(do_command(THD*)+0x16b) [0x7f02db4bd1cb]
      /usr/sbin/mysqld(do_handle_one_connection(THD*)+0x17f) [0x7f02db57ba5f]
      /usr/sbin/mysqld(handle_one_connection+0x47) [0x7f02db57bbb7]
      /lib64/libpthread.so.0(+0x3df1007aa1) [0x7f02dac24aa1]
      /lib64/libc.so.6(clone+0x6d) [0x7f02d9108aad]

      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x7ef64ec1f020): is an invalid pointer
      Connection ID (thread ID): 16501880
      Status: NOT_KILLED

      Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=off

      The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
      information that should help you find out what is causing the crash.

      We think the query pointer is invalid, but we will try to print it anyway.
      Query: UPDATE mail_queue_attachment_archive SET guid = UUID()

      161030 11:11:51 mysqld_safe Number of processes running now: 0
      161030 11:11:51 mysqld_safe WSREP: not restarting wsrep node automatically
      161030 11:11:51 mysqld_safe mysqld from pid file /var/lib/mysql/db-east.pid ended

      Attachments

        Issue Links

          Activity

            kpvmaria Kaidalov Pavel created issue -
            kpvmaria Kaidalov Pavel made changes -
            Field Original Value New Value
            Description One of the cluster nodes crashed with possible error

            [Warning] WSREP: transaction size limit (2147483647) exceeded: 2147483648

            however transaction committed successfully on 2 other nodes, and crashed node after restart got IST and continue to work correctly. I suppose that whether transaction should be discarded, or completed successfully at all nodes, but not to crash only one node. Here is log output:



            2016-10-30 10:53:42 139650184657664 [Note] InnoDB: Online DDL : Start applying row log
            2016-10-30 10:53:42 139650184657664 [Note] InnoDB: Online DDL : End of applying row log
            2016-10-30 10:53:42 139650184657664 [Note] InnoDB: Online DDL : Completed
            2016-10-30 11:11:49 139650184657664 [Warning] WSREP: transaction size limit (2147483647) exceeded: 2147483648
            161030 11:11:49 [ERROR] mysqld got signal 11 ;
            This could be because you hit a bug. It is also possible that this binary
            or one of the libraries it was linked against is corrupt, improperly built,
            or misconfigured. This error can also be caused by malfunctioning hardware.

            To report this bug, see https://mariadb.com/kb/en/reporting-bugs

            We will try our best to scrape up some info that will hopefully help
            diagnose the problem, but since we have already crashed,
            something is definitely wrong and this may fail.

            Server version: 10.1.17-MariaDB
            key_buffer_size=134217728
            read_buffer_size=131072
            max_used_connections=92
            max_threads=3002
            thread_count=49
            It is possible that mysqld could use up to
            key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 6725061 K bytes of memory
            Hope that's ok; if not, decrease some variables in the equation.

            Thread pointer: 0x0x7ef642ec7008
            Attempting backtrace. You can use the following information to find out
            where mysqld died. If you see no messages after this, something went
            terribly wrong...
            stack_bottom = 0x7f02d7a63140 thread_stack 0x48400
            (my_addr_resolve failure: fork)
            /usr/sbin/mysqld(my_print_stacktrace+0x2b) [0x7f02dbacb16b]
            /usr/sbin/mysqld(handle_fatal_signal+0x475) [0x7f02db627375]
            /lib64/libpthread.so.0(+0x3df100f7e0) [0x7f02dac2c7e0]
            /usr/sbin/mysqld(wsrep_get_apply_format(THD*)+0x20) [0x7f02db5d55d0]
            /usr/sbin/mysqld(wsrep_dump_rbr_buf_with_header(THD*, void const*, unsigned long)+0x84) [0x7f02db5d4c54]
            /usr/sbin/mysqld(+0x5792a2) [0x7f02db5d52a2]
            /usr/sbin/mysqld(wsrep_run_wsrep_commit+0x404) [0x7f02db5c4264]
            /usr/sbin/mysqld(+0x568ec8) [0x7f02db5c4ec8]
            /usr/sbin/mysqld(ha_commit_trans(THD*, bool)+0x197) [0x7f02db62a2e7]
            /usr/sbin/mysqld(trans_commit_stmt(THD*)+0x38) [0x7f02db589478]
            /usr/sbin/mysqld(mysql_execute_command(THD*)+0xb7c) [0x7f02db4b1a3c]
            /usr/sbin/mysqld(mysql_parse(THD*, char*, unsigned int, Parser_state*)+0x28d) [0x7f02db4ba17d]
            /usr/sbin/mysqld(+0x45e27c) [0x7f02db4ba27c]
            /usr/sbin/mysqld(dispatch_command(enum_server_command, THD*, char*, unsigned int)+0x1c63) [0x7f02db4bc603]
            /usr/sbin/mysqld(do_command(THD*)+0x16b) [0x7f02db4bd1cb]
            /usr/sbin/mysqld(do_handle_one_connection(THD*)+0x17f) [0x7f02db57ba5f]
            /usr/sbin/mysqld(handle_one_connection+0x47) [0x7f02db57bbb7]
            /lib64/libpthread.so.0(+0x3df1007aa1) [0x7f02dac24aa1]
            /lib64/libc.so.6(clone+0x6d) [0x7f02d9108aad]

            Trying to get some variables.
            Some pointers may be invalid and cause the dump to abort.
            Query (0x7ef64ec1f020): is an invalid pointer
            Connection ID (thread ID): 16501880
            Status: NOT_KILLED

            Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=off

            The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
            information that should help you find out what is causing the crash.

            We think the query pointer is invalid, but we will try to print it anyway.
            Query: UPDATE mail_queue_attachment_archive SET guid = UUID()

            161030 11:11:51 mysqld_safe Number of processes running now: 0
            161030 11:11:51 mysqld_safe WSREP: not restarting wsrep node automatically
            161030 11:11:51 mysqld_safe mysqld from pid file /var/lib/mysql/db-east.edoctrina.org.pid ended
            One of the cluster nodes crashed with possible error

            [Warning] WSREP: transaction size limit (2147483647) exceeded: 2147483648

            however transaction committed successfully on 2 other nodes, and crashed node after restart got IST and continue to work correctly. I suppose that whether transaction should be discarded, or completed successfully at all nodes, but not to crash only one node. Here is log output:



            2016-10-30 10:53:42 139650184657664 [Note] InnoDB: Online DDL : Start applying row log
            2016-10-30 10:53:42 139650184657664 [Note] InnoDB: Online DDL : End of applying row log
            2016-10-30 10:53:42 139650184657664 [Note] InnoDB: Online DDL : Completed
            2016-10-30 11:11:49 139650184657664 [Warning] WSREP: transaction size limit (2147483647) exceeded: 2147483648
            161030 11:11:49 [ERROR] mysqld got signal 11 ;
            This could be because you hit a bug. It is also possible that this binary
            or one of the libraries it was linked against is corrupt, improperly built,
            or misconfigured. This error can also be caused by malfunctioning hardware.

            To report this bug, see https://mariadb.com/kb/en/reporting-bugs

            We will try our best to scrape up some info that will hopefully help
            diagnose the problem, but since we have already crashed,
            something is definitely wrong and this may fail.

            Server version: 10.1.17-MariaDB
            key_buffer_size=134217728
            read_buffer_size=131072
            max_used_connections=92
            max_threads=3002
            thread_count=49
            It is possible that mysqld could use up to
            key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 6725061 K bytes of memory
            Hope that's ok; if not, decrease some variables in the equation.

            Thread pointer: 0x0x7ef642ec7008
            Attempting backtrace. You can use the following information to find out
            where mysqld died. If you see no messages after this, something went
            terribly wrong...
            stack_bottom = 0x7f02d7a63140 thread_stack 0x48400
            (my_addr_resolve failure: fork)
            /usr/sbin/mysqld(my_print_stacktrace+0x2b) [0x7f02dbacb16b]
            /usr/sbin/mysqld(handle_fatal_signal+0x475) [0x7f02db627375]
            /lib64/libpthread.so.0(+0x3df100f7e0) [0x7f02dac2c7e0]
            /usr/sbin/mysqld(wsrep_get_apply_format(THD*)+0x20) [0x7f02db5d55d0]
            /usr/sbin/mysqld(wsrep_dump_rbr_buf_with_header(THD*, void const*, unsigned long)+0x84) [0x7f02db5d4c54]
            /usr/sbin/mysqld(+0x5792a2) [0x7f02db5d52a2]
            /usr/sbin/mysqld(wsrep_run_wsrep_commit+0x404) [0x7f02db5c4264]
            /usr/sbin/mysqld(+0x568ec8) [0x7f02db5c4ec8]
            /usr/sbin/mysqld(ha_commit_trans(THD*, bool)+0x197) [0x7f02db62a2e7]
            /usr/sbin/mysqld(trans_commit_stmt(THD*)+0x38) [0x7f02db589478]
            /usr/sbin/mysqld(mysql_execute_command(THD*)+0xb7c) [0x7f02db4b1a3c]
            /usr/sbin/mysqld(mysql_parse(THD*, char*, unsigned int, Parser_state*)+0x28d) [0x7f02db4ba17d]
            /usr/sbin/mysqld(+0x45e27c) [0x7f02db4ba27c]
            /usr/sbin/mysqld(dispatch_command(enum_server_command, THD*, char*, unsigned int)+0x1c63) [0x7f02db4bc603]
            /usr/sbin/mysqld(do_command(THD*)+0x16b) [0x7f02db4bd1cb]
            /usr/sbin/mysqld(do_handle_one_connection(THD*)+0x17f) [0x7f02db57ba5f]
            /usr/sbin/mysqld(handle_one_connection+0x47) [0x7f02db57bbb7]
            /lib64/libpthread.so.0(+0x3df1007aa1) [0x7f02dac24aa1]
            /lib64/libc.so.6(clone+0x6d) [0x7f02d9108aad]

            Trying to get some variables.
            Some pointers may be invalid and cause the dump to abort.
            Query (0x7ef64ec1f020): is an invalid pointer
            Connection ID (thread ID): 16501880
            Status: NOT_KILLED

            Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=off,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=off

            The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
            information that should help you find out what is causing the crash.

            We think the query pointer is invalid, but we will try to print it anyway.
            Query: UPDATE mail_queue_attachment_archive SET guid = UUID()

            161030 11:11:51 mysqld_safe Number of processes running now: 0
            161030 11:11:51 mysqld_safe WSREP: not restarting wsrep node automatically
            161030 11:11:51 mysqld_safe mysqld from pid file /var/lib/mysql/db-east.pid ended
            nirbhay_c Nirbhay Choubey (Inactive) made changes -
            Assignee Nirbhay Choubey [ nirbhay_c ]
            nirbhay_c Nirbhay Choubey (Inactive) made changes -
            Status Open [ 1 ] In Progress [ 3 ]
            nirbhay_c Nirbhay Choubey (Inactive) made changes -
            Fix Version/s 10.1.20 [ 22112 ]
            Resolution Fixed [ 1 ]
            Status In Progress [ 3 ] Closed [ 6 ]
            nirbhay_c Nirbhay Choubey (Inactive) made changes -
            serg Sergei Golubchik made changes -
            Workflow MariaDB v3 [ 78140 ] MariaDB v4 [ 151149 ]

            People

              nirbhay_c Nirbhay Choubey (Inactive)
              kpvmaria Kaidalov Pavel
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.